# supabase-demo

./: .dockerignore  .gitignore  cline_task_apr-15-2025_11-31-31-am.md  main.py  requirements.txt  todo-api.md
rs-todo-mcp/: Cargo.toml  README.md
rs-todo-mcp/src/: main.rs
rs-todo-mcp/src/common/: counter.rs  mod.rs  todo_client.rs
